<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StatisticsActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:background="@drawable/table"
                android:padding="30dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chart"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:textColor="#FFFFFF"
                        android:padding="5dp"
                        android:text="Credits:"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1"/>
                <TextView
                        android:gravity="right"
                        android:textColor="#FFFFFF"
                        android:padding="5dp"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView_stats_credits"
                        android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:textColor="#FFFFFF"
                        android:padding="5dp"
                        android:text="@string/wins"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1"/>
                <TextView
                        android:gravity="right"
                        android:textColor="#FFFFFF"
                        android:padding="5dp"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView_stats_wins"
                        android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:textColor="#FFFFFF"
                        android:padding="5dp"
                        android:text="@string/loses"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1"/>
                <TextView
                        android:gravity="right"
                        android:textColor="#FFFFFF"
                        android:padding="5dp"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView_stats_loses"
                        android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:textColor="#FFFFFF"
                        android:padding="5dp"
                        android:text="@string/tie"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1"/>
                <TextView
                        android:gravity="right"
                        android:textColor="#FFFFFF"
                        android:padding="5dp"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView_stats_ties"
                        android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:textColor="#FFFFFF"
                        android:padding="5dp"
                        android:text="@string/credits_won"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1"/>
                <TextView
                        android:gravity="right"
                        android:textColor="#FFFFFF"
                        android:padding="5dp"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView_stats_credits_won"
                        android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:textColor="#FFFFFF"
                        android:padding="5dp"
                        android:text="@string/credits_lost"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1"/>
                <TextView
                        android:gravity="right"
                        android:textColor="#FFFFFF"
                        android:padding="5dp"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView_stats_credits_lost"
                        android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:textColor="#FFFFFF"
                        android:padding="5dp"
                        android:text="@string/biggest_win"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1"/>
                <TextView
                        android:gravity="right"
                        android:textColor="#FFFFFF"
                        android:padding="5dp"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView_stats_biggest_win"
                        android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:textColor="#FFFFFF"
                        android:padding="5dp"
                        android:text="@string/blackjacks"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1"/>
                <TextView
                        android:gravity="right"
                        android:textColor="#FFFFFF"
                        android:padding="5dp"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView_stats_blackjacks"
                        android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:textColor="#FFFFFF"
                        android:padding="5dp"
                        android:text="@string/busted_count"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1"/>
                <TextView
                        android:gravity="right"
                        android:textColor="#FFFFFF"
                        android:padding="5dp"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView_stats_busted_count"
                        android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="363dp"
                    tools:layout_editor_absoluteX="30dp">
                <Button style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/reset_everything" android:id="@+id/button_stats_reset"
                        android:layout_weight="1"/>
                <Button style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:padding="5dp"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_margin="10dp" android:text="@string/back" android:id="@+id/button_stats_back"
                        android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>